tests/expectations/compiler/constructor/empty_constructor_fail.out
DCE_ENABLED:
Error [ETYC0372126]: A constructor cannot be empty
    --> compiler-test:4:5
     |
   4 |     async constructor() {}
     |     ^^^^^^^^^^^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372126]: A constructor cannot be empty
    --> compiler-test:4:5
     |
   4 |     async constructor() {}
     |     ^^^^^^^^^^^^^^^^^^^^^^
